# bomwater-notebook

./: .gitignore  AccessAllWaterCoarseDischargeInMDB.ipynb  AccessWaterCoarseLevelSelectedStations.ipynb  Access_BoM_Water_Service.ipynb  LICENSE  README.md  build_env.sh  environment.yml  jupyter_lab_management_readme.md  pyproject.toml  refresh_and_start_jupyter_lab.bat  requirements.txt  start.sh  start_jupyter_lab.bat
bomwater_data/mdb_water_coarse_discharge/: mdb_WaterCourseDischarge_stations.json
bomwater_data/mdb_water_course_level/: 414209.html  425010.html  A4260505.html  A4260507.html  A4260509.html  A4260511.html  A4260513.html  A4260515.html  A4260517.html  A4260519.html  A4260903.html
exploratory/: README.md  demo_data_access_plotting.ipynb  demo_sos4py.ipynb
