[tool.poetry]
name = "bomwater-notebook"
version = "0.1.0"
description = "MVP for accessing BoM Water API and downloading water data"
authors = ["fre171csiro <andrew.freebairn@csiro.au>"]
readme = "README.md"
packages = [{include = "bomwater_notebook"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
geopandas = "^0.11.1"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
voila = "^0.3.6"
ipyfilechooser = "^0.6.0"
jupyterlab = "^3.4.7"
ipywidgets = "^8.0.2"
ipyleaflet = "^0.17.1"
jupyter = "^1.0.0"
sidecar = "^0.5.1"
requests = "^2.28.1"
bomwater = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
